<resources>
    <string name="practice">Practice</string>
    <string name="scores">Scores</string>
    <string name="words">Dictionary</string>
    <string name="add_words">Add words</string>
    <string name="missing_words">It looks like you don\'t have enough words added.\n Create a group, add at least 5 words and start practicing!</string>
    <string name="new_group">New group</string>
    <string name="group_name">Group name</string>
    <string name="create_group">Create group</string>
    <string name="group_name_error">Missing group name</string>
    <string name="groups">Groups</string>
    <string name="num_of_words">%1$d word(s)</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="item_removed">\"%1$s\" removed</string>
    <string name="japanese">Japanese</string>
    <string name="english">English</string>
    <string name="hungarian">Hungarian</string>
    <string name="practiced_language">Practiced language</string>
    <string-array name="display_languages">
        <item>@string/english</item>
        <item>@string/japanese</item>
        <item>@string/hungarian</item>
    </string-array>
    <string-array name="locale_languages">
        <item>en</item>
        <item>ja</item>
        <item>hu</item>
    </string-array>
    <string name="new_word">New word</string>
    <string name="add_word">Add word</string>
    <string name="kanji" translatable="false">Kanji</string>
    <string name="hiragana_or_katakana" translatable="false">Hiragana/Katakana</string>
    <string name="word_meaning">Meaning</string>
    <string name="new_word_hint">%1$s word</string>
    <string name="main_word_error">Missing word</string>
    <string name="word_meaning_error">Missing word meaning</string>
    <string name="guess_the_word">Guess the word</string>
    <string name="guess_the_meaning">Guess the meaning</string>
    <string name="select_group">Select group</string>
    <string name="answer">Answer</string>
    <string name="practice_percent" translatable="false">%1$d%%</string>
    <string name="home">Home</string>
    <string name="practice_result_saved_message">Your practice has been saved. You can find it under the Scores section</string>
    <string name="good_job">Good job!</string>
    <string name="better_luck_next_time">Better luck next time!</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="missing_scores">You don’t have any saved practices. Once you finished practicing you can find statistics about your latest 5 practices</string>
    <string name="word_meaning_helper_text">If you want to add multiple meanings separate them with comas!</string>
    <string name="update_word">Update word</string>
    <string name="camera">Camera</string>
    <string name="word_group_transition_name" translatable="false">word_group_transition</string>
    <string name="guesses">Guesses</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="practice_percentages">Practice percentages</string>
    <string name="guesses_percentage">Guess percentages</string>
    <string name="hint_variant_display" translatable="false">(%1$s)</string>
    <string name="speech_recognizer_extra_prompt">Say your answer</string>
    <string name="share">Share</string>
    <string name="permission_required">Permission required</string>
    <string name="camera_rationale_message">This application needs to access the camera to scan group QR codes</string>
    <string name="cancel">Cancel</string>
    <string name="scanner_help">Point your camera at the QR code</string>
    <string name="invalid_qr_code">Invalid QR code</string>
    <string name="group_share_title">Share group with QR code</string>
    <string name="group_share_description">To share, scan the QR code above</string>
</resources>