<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/practiceHomeFragment">

    <fragment
        android:id="@+id/practiceHomeFragment"
        android:name="com.example.vsensei.view.ui.PracticeHomeFragment"
        android:label="@string/practice"
        tools:layout="@layout/fragment_practice_home">
        <action
            android:id="@+id/action_practiceHomeFragment_to_groupSelectFragment"
            app:destination="@id/groupSelectFragment" />
        <action
            android:id="@+id/action_practiceHomeFragment_to_practiceFragment"
            app:destination="@id/practiceFragment" />
    </fragment>
    <fragment
        android:id="@+id/dictionaryFragment"
        android:name="com.example.vsensei.view.ui.DictionaryFragment"
        android:label="@string/groups"
        tools:layout="@layout/fragment_dictionary">
        <action
            android:id="@+id/action_dictionaryFragment_to_newGroupFragment"
            app:destination="@id/newGroupFragment" />
        <action
            android:id="@+id/action_dictionaryFragment_to_wordGroupFragment"
            app:destination="@id/wordGroupFragment" />
    </fragment>
    <fragment
        android:id="@+id/scoresFragment"
        android:name="com.example.vsensei.view.ui.ScoresFragment"
        android:label="@string/scores"
        tools:layout="@layout/fragment_scores" />
    <dialog
        android:id="@+id/newGroupFragment"
        android:name="com.example.vsensei.view.ui.NewGroupFragment"
        android:label="@string/new_group"
        tools:layout="@layout/fragment_new_group" />
    <fragment
        android:id="@+id/wordGroupFragment"
        android:name="com.example.vsensei.view.ui.WordGroupFragment"
        android:label="{groupName}"
        tools:layout="@layout/fragment_word_group">
        <argument
            android:name="groupName"
            app:argType="string" />
        <action
            android:id="@+id/action_wordGroupFragment_to_newWordFragment"
            app:destination="@id/newWordFragment" />
        <argument
            android:name="wordGroup"
            app:argType="com.example.vsensei.data.WordGroup" />
    </fragment>
    <dialog
        android:id="@+id/newWordFragment"
        android:name="com.example.vsensei.view.ui.NewWordFragment"
        android:label="@string/new_word"
        tools:layout="@layout/fragment_new_word">
        <argument
            android:name="wordGroup"
            app:argType="com.example.vsensei.data.WordGroup" />
        <argument
            android:name="word"
            app:argType="com.example.vsensei.data.Word"
            app:nullable="true" />
    </dialog>
    <dialog
        android:id="@+id/groupSelectFragment"
        android:name="com.example.vsensei.view.ui.GroupSelectFragment"
        android:label="fragment_group_select">
        <argument
            android:name="wordGroupsWithWords"
            app:argType="com.example.vsensei.data.WordGroupWithWords[]" />
        <argument
            android:name="practiceType"
            app:argType="com.example.vsensei.data.PracticeType" />
        <action
            android:id="@+id/action_groupSelectFragment_to_practiceFragment"
            app:destination="@id/practiceFragment" />
    </dialog>
    <fragment
        android:id="@+id/practiceFragment"
        android:name="com.example.vsensei.view.ui.PracticeFragment"
        android:label="{practiceTypeLabel}"
        tools:layout="@layout/fragment_practice">
        <argument
            android:name="practiceType"
            app:argType="com.example.vsensei.data.PracticeType" />
        <argument
            android:name="wordGroupWithWords"
            app:argType="com.example.vsensei.data.WordGroupWithWords" />
        <argument
            android:name="practiceTypeLabel"
            app:argType="string" />
        <action
            android:id="@+id/action_practiceFragment_to_practiceResultFragment"
            app:destination="@id/practiceResultFragment"
            app:popUpTo="@id/practiceFragment" />
    </fragment>
    <fragment
        android:id="@+id/practiceResultFragment"
        android:name="com.example.vsensei.view.ui.PracticeResultFragment"
        android:label="{practiceTypeLabel}"
        tools:layout="@layout/fragment_practice_result">
        <argument
            android:name="practiceTypeLabel"
            app:argType="string" />
    </fragment>
</navigation>