<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.ui.NewGroupFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:transitionGroup="true"
        android:transitionName="newGroupCardTransition"
        app:cardBackgroundColor="?attr/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_close"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_group"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/close_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/close_button" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/group_name_input_container"
                style="@style/ThemeOverlay.App.TextInputLayout.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/group_name"
                app:helperText="@string/group_name_ex"
                app:layout_constraintTop_toBottomOf="@id/card_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/language_selector_container"
                style="@style/ThemeOverlay.App.TextInputLayout.Secondary.DropDownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/practiced_language"
                app:layout_constraintTop_toBottomOf="@id/group_name_input_container">

                <AutoCompleteTextView
                    android:id="@+id/language_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@android:color/white"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_group_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/create_group"
                android:textColor="?android:textColorPrimary"
                app:backgroundTint="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/language_selector_container"
                app:rippleColor="@android:color/darker_gray" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.core.widget.NestedScrollView>