<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.ui.ShareFragment"
    tools:theme="@style/Theme.VSensei">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/share_group_card_margin"
        android:background="?attr/colorCard"
        android:elevation="@dimen/share_group_card_elevation"
        android:transitionName="@string/word_group_transition_name">

        <TextView
            android:id="@+id/group_share_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/group_share_title_margin"
            android:text="@string/group_share_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/qr_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="@dimen/qr_code_size"
            android:layout_height="@dimen/qr_code_size"
            app:layout_constraintBottom_toTopOf="@id/group_share_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_share_title"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/group_share_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/group_share_description_margin"
            android:text="@string/group_share_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?attr/colorOnSurface"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qr_code"
            tools:visibility="visible" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/qr_code_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>