<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:fillViewport="true"
    tools:context=".view.ui.PracticeHomeFragment"
    tools:theme="@style/Theme.VSensei">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="@dimen/container_padding"
        android:paddingTop="@dimen/container_padding"
        android:paddingEnd="@dimen/container_padding"
        android:paddingBottom="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/practice_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/practice_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/practice_button_icon_margin"
                android:elevation="@dimen/practice_button_icon_elevation"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                app:srcCompat="@drawable/ic_practice_home"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guess_the_word_button"
                style="@style/Widget.App.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/practice_button_margin"
                android:padding="@dimen/practice_button_padding"
                android:text="@string/guess_the_word"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guess_the_meaning_button"
                style="@style/Widget.App.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/practice_button_margin"
                android:padding="@dimen/practice_button_padding"
                android:text="@string/guess_the_meaning"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guess_the_word_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/empty_groups_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/missing_words"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/text_size_regular"
                app:drawableTopCompat="@drawable/ic_not_found" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>