<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:fillViewport="true"
    tools:context=".view.ui.PracticeResultFragment"
    tools:theme="@style/Theme.VSensei">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/container_padding">

        <ImageView
            android:id="@+id/result_icon"
            android:layout_width="@dimen/result_icon_width"
            android:layout_height="@dimen/result_icon_size"
            app:layout_constraintBottom_toTopOf="@id/practice_result_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_result"
            tools:ignore="ContentDescription" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/correct_guess_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="?attr/colorSecondary"
            app:indicatorSize="@dimen/progress_indicator_size"
            app:layout_constraintBottom_toBottomOf="@id/result_icon"
            app:layout_constraintEnd_toEndOf="@id/result_icon"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="@id/result_icon"
            app:layout_constraintTop_toTopOf="@id/result_icon"
            app:layout_constraintVertical_bias="0.008"
            app:trackColor="?attr/colorPrimary"
            app:trackThickness="@dimen/indicator_track_thickness"
            tools:progress="100" />

        <TextView
            android:id="@+id/percent_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/practice_percent_text_size"
            app:layout_constraintBottom_toBottomOf="@id/correct_guess_percent"
            app:layout_constraintEnd_toEndOf="@id/correct_guess_percent"
            app:layout_constraintStart_toStartOf="@id/correct_guess_percent"
            app:layout_constraintTop_toTopOf="@id/correct_guess_percent"
            tools:text="100%" />

        <TextView
            android:id="@+id/practice_result_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/result_title_margin_top"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/practice_result_message"
            app:layout_constraintTop_toBottomOf="@id/result_icon"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/good_job" />

        <TextView
            android:id="@+id/practice_result_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practice_result_saved_message"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toTopOf="@id/home_button"
            app:layout_constraintTop_toBottomOf="@id/practice_result_title"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_button"
            style="@style/Widget.App.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/navigation_button_margin_top"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/practice_result_message"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>